JavaScript Iconic Snake Game

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </div>
 </div>
 
-<!-- <img src="image/snake-game-ai-gen.png" alt="snake-logo" id="logo">
-<h1 id="instruction-text">Press spacebar to start the game</h1> -->
+<img src="image/snake-game-ai-gen.png" alt="snake-logo" id="logo">
+<h1 id="instruction-text">Press spacebar to start the game</h1>
 
 
     <script src="main.js" defer></script>
